// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`indirect_toast.sql > line 18 1`] = `
[
  "SET default_toast_compression = 'pglz'",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 32,
                  "sval": {
                    "sval": "pglz",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "default_toast_compression",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`indirect_toast.sql > line 20 1`] = `
[
  "CREATE TABLE indtoasttest(descr text, cnt int DEFAULT 0, f1 text, f2 text)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "indtoasttest",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "descr",
                  "is_local": true,
                  "location": 26,
                  "typeName": {
                    "location": 32,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "cnt",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_DEFAULT",
                        "location": 46,
                        "raw_expr": {
                          "A_Const": {
                            "ival": {},
                            "location": 54,
                          },
                        },
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 38,
                  "typeName": {
                    "location": 42,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "f1",
                  "is_local": true,
                  "location": 57,
                  "typeName": {
                    "location": 60,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "f2",
                  "is_local": true,
                  "location": 66,
                  "typeName": {
                    "location": 69,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`indirect_toast.sql > line 22 1`] = `
[
  "INSERT INTO indtoasttest(descr, f1, f2) VALUES('two-compressed', repeat('1234567890',1000), repeat('1234567890',1000))",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 25,
                  "name": "descr",
                },
              },
              {
                "ResTarget": {
                  "location": 32,
                  "name": "f1",
                },
              },
              {
                "ResTarget": {
                  "location": 36,
                  "name": "f2",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "indtoasttest",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 47,
                            "sval": {
                              "sval": "two-compressed",
                            },
                          },
                        },
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 72,
                                  "sval": {
                                    "sval": "1234567890",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1000,
                                  },
                                  "location": 85,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "repeat",
                                },
                              },
                            ],
                            "location": 65,
                          },
                        },
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 99,
                                  "sval": {
                                    "sval": "1234567890",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1000,
                                  },
                                  "location": 112,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "repeat",
                                },
                              },
                            ],
                            "location": 92,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`indirect_toast.sql > line 28 1`] = `
[
  "SELECT descr, substring(make_tuple_indirect(indtoasttest)::text, 1, 200) FROM indtoasttest",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 78,
                  "relname": "indtoasttest",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "descr",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 14,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "FuncCall": {
                                "args": [
                                  {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "indtoasttest",
                                          },
                                        },
                                      ],
                                      "location": 44,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "make_tuple_indirect",
                                    },
                                  },
                                ],
                                "location": 24,
                              },
                            },
                            "location": 57,
                            "typeName": {
                              "location": 59,
                              "names": [
                                {
                                  "String": {
                                    "sval": "text",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 65,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 200,
                            },
                            "location": 68,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "substring",
                          },
                        },
                      ],
                      "location": 14,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`indirect_toast.sql > line 31 1`] = `
[
  "UPDATE indtoasttest SET cnt = cnt +1 RETURNING substring(indtoasttest::text, 1, 200)",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "indtoasttest",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 47,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "indtoasttest",
                                    },
                                  },
                                ],
                                "location": 57,
                              },
                            },
                            "location": 69,
                            "typeName": {
                              "location": 71,
                              "names": [
                                {
                                  "String": {
                                    "sval": "text",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 77,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 200,
                            },
                            "location": 80,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "substring",
                          },
                        },
                      ],
                      "location": 47,
                    },
                  },
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 24,
                  "name": "cnt",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "cnt",
                              },
                            },
                          ],
                          "location": 30,
                        },
                      },
                      "location": 34,
                      "name": [
                        {
                          "String": {
                            "sval": "+",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 35,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`indirect_toast.sql > line 34 1`] = `
[
  "UPDATE indtoasttest SET cnt = cnt +1, f1 = f1 RETURNING substring(indtoasttest::text, 1, 200)",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "indtoasttest",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 56,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "indtoasttest",
                                    },
                                  },
                                ],
                                "location": 66,
                              },
                            },
                            "location": 78,
                            "typeName": {
                              "location": 80,
                              "names": [
                                {
                                  "String": {
                                    "sval": "text",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 86,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 200,
                            },
                            "location": 89,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "substring",
                          },
                        },
                      ],
                      "location": 56,
                    },
                  },
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 24,
                  "name": "cnt",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "cnt",
                              },
                            },
                          ],
                          "location": 30,
                        },
                      },
                      "location": 34,
                      "name": [
                        {
                          "String": {
                            "sval": "+",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 35,
                        },
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 38,
                  "name": "f1",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 43,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`indirect_toast.sql > line 37 1`] = `
[
  "UPDATE indtoasttest SET cnt = cnt +1, f1 = f1||'' RETURNING substring(indtoasttest::text, 1, 200)",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "indtoasttest",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 60,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "indtoasttest",
                                    },
                                  },
                                ],
                                "location": 70,
                              },
                            },
                            "location": 82,
                            "typeName": {
                              "location": 84,
                              "names": [
                                {
                                  "String": {
                                    "sval": "text",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 90,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 200,
                            },
                            "location": 93,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "substring",
                          },
                        },
                      ],
                      "location": 60,
                    },
                  },
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 24,
                  "name": "cnt",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "cnt",
                              },
                            },
                          ],
                          "location": 30,
                        },
                      },
                      "location": 34,
                      "name": [
                        {
                          "String": {
                            "sval": "+",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 35,
                        },
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 38,
                  "name": "f1",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 43,
                        },
                      },
                      "location": 45,
                      "name": [
                        {
                          "String": {
                            "sval": "||",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 47,
                          "sval": {
                            "sval": "",
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`indirect_toast.sql > line 39 1`] = `
[
  "UPDATE indtoasttest SET cnt = cnt +1, f1 = '-'||f1||'-' RETURNING substring(indtoasttest::text, 1, 200)",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "indtoasttest",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 66,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "indtoasttest",
                                    },
                                  },
                                ],
                                "location": 76,
                              },
                            },
                            "location": 88,
                            "typeName": {
                              "location": 90,
                              "names": [
                                {
                                  "String": {
                                    "sval": "text",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 96,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 200,
                            },
                            "location": 99,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "substring",
                          },
                        },
                      ],
                      "location": 66,
                    },
                  },
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 24,
                  "name": "cnt",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "cnt",
                              },
                            },
                          ],
                          "location": 30,
                        },
                      },
                      "location": 34,
                      "name": [
                        {
                          "String": {
                            "sval": "+",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 35,
                        },
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 38,
                  "name": "f1",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Const": {
                              "location": 43,
                              "sval": {
                                "sval": "-",
                              },
                            },
                          },
                          "location": 46,
                          "name": [
                            {
                              "String": {
                                "sval": "||",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "f1",
                                  },
                                },
                              ],
                              "location": 48,
                            },
                          },
                        },
                      },
                      "location": 50,
                      "name": [
                        {
                          "String": {
                            "sval": "||",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 52,
                          "sval": {
                            "sval": "-",
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`indirect_toast.sql > line 41 1`] = `
[
  "SELECT substring(indtoasttest::text, 1, 200) FROM indtoasttest",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 50,
                  "relname": "indtoasttest",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "indtoasttest",
                                    },
                                  },
                                ],
                                "location": 17,
                              },
                            },
                            "location": 29,
                            "typeName": {
                              "location": 31,
                              "names": [
                                {
                                  "String": {
                                    "sval": "text",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 37,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 200,
                            },
                            "location": 40,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "substring",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`indirect_toast.sql > line 43 1`] = `
[
  "VACUUM FREEZE indtoasttest",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "freeze",
                  "location": 7,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 14,
                    "relname": "indtoasttest",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`indirect_toast.sql > line 47 1`] = `
[
  "CREATE FUNCTION update_using_indirect()
        RETURNS trigger
        LANGUAGE plpgsql AS $$
BEGIN
    NEW := make_tuple_indirect(NEW);
    RETURN NEW;
END$$",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "update_using_indirect",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 72,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
BEGIN
    NEW := make_tuple_indirect(NEW);
    RETURN NEW;
END",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 89,
                },
              },
            ],
            "returnType": {
              "location": 56,
              "names": [
                {
                  "String": {
                    "sval": "trigger",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`indirect_toast.sql > line 55 1`] = `
[
  "CREATE TRIGGER indtoasttest_update_indirect
        BEFORE INSERT OR UPDATE
        ON indtoasttest
        FOR EACH ROW
        EXECUTE PROCEDURE update_using_indirect()",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTrigStmt": {
            "events": 20,
            "funcname": [
              {
                "String": {
                  "sval": "update_using_indirect",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 87,
              "relname": "indtoasttest",
              "relpersistence": "p",
            },
            "row": true,
            "timing": 2,
            "trigname": "indtoasttest_update_indirect",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`indirect_toast.sql > line 79 1`] = `
[
  "DROP TABLE indtoasttest",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "indtoasttest",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`indirect_toast.sql > line 82 1`] = `
[
  "RESET default_toast_compression",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "default_toast_compression",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
